# cacg

./: CMakeLists.txt  CMakeLists_idle.txt  README.md  cleanCmake  makefile  run
RHSTools/: DBOp.py  DownloadMatrixByUrl.py  MatrixNameListToDownload.txt  MatrixPropertyQuery.py  MrhsGen.py  MrhsGenBeta.py  MrhsGenNormal.py  MrhsGenUniform.py  MrhsGenUniform.py.bk  To_move_files.py  clean.py  mm2PetscBin.py  uncompressed.py
src/: BLAS2.c  BLAS3.c  BLAS3.h  CMakeLists.txt  CMakeLists_idle.txt  DataTypes.h  Debugging.c  Debugging.h  DenseMatIO.c  DenseMatIO.h  GetRHS.c  GetRHS.h  MatGenerator.h  MatrixOperations.c  MatrixOperations.h  SparseMatrixDistribution.c  TSQR.h  bcbcgKernel.c  bcbcgKernel.h  bcgKernel.c  cbcgKernel.c  cbcgKernel.h  common.c  common.h  main.c  matrixType.h  readMTX.c  readMTX.h
src.int.bk/: BLAS1.h  BLAS3.c  DLSsolvers.c  DLSsolvers.h  Debugging.c  GetRHS.h  MatrixDecomposition.c  MatrixDecomposition.h  MatrixPowerKernel.h  SparseMatrixDistribution.c  bcgKernel.h  cbcgKernel.h  main.c  readMTX.c
src.long.bk/: BLAS2.h  BLAS3.c  BLAS3.h  DLSsolvers.c  DataTypes.h  Debugging.c  Debugging.h  GetRHS.h  MatrixDecomposition.c  MatrixOperations.c  MatrixOperations.h  SparseMatrixDistribution.c  SparseMatrixDistribution.h  bcbcgKernel.c  bcgKernel.c  bcgKernel.h  cbcgKernel.c  common.c  common.h  main.c  main.c.bk  matrixType.h
src.long.plus.int/: BLAS3.h  DataTypes.h  GetRHS.c  MatGenerator.c  MatGenerator.h  bcbcgKernel.c  bcbcgKernel.h  bcgKernel.c  common.c  matrixType.c
